--- a/smirk/src/styles/index.css
+++ b/smirk/src/styles/index.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: 100%;
   overflow: auto;
 }
 
@@ -40,7 +40,7 @@ header {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 12px;
-  max-width: 800px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -122,9 +122,7 @@ header {
   transition: all 0.3s ease-in-out;
 }
 
-.chart-container:hover {
-  transform: scale(2);
-}
+
 
 .chart-small {
   max-width: 100%;
